--- a/esp/index.html
+++ b/esp/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>GHM Contenidos</title>
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/estilos.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body class="index">
@@ -14,9 +14,9 @@
 		<div class="container lang-container d-none d-lg-block">
 			<div class="row">
 				<div class="col-2 text-right ml-auto">
-					<button id="langEsp" class="lang active">ES</button>
+					<a href="#" id="langEsp" class="lang active">ES</a>
 					<span class="lang">/</span>
-					<button id="langEng" class="lang">EN</button>
+					<a href="../eng/index.html" id="langEng" class="lang">EN</a>
 				</div>
 			</div>
 		</div>
@@ -100,9 +100,9 @@
 					<div id="lang-container" class="container lang-container d-block d-lg-none">
 						<div class="row">
 							<div class="col-12 text-left">
-								<button id="langEsp" class="lang active">ES</button>
+								<a href="#" id="langEsp" class="lang active">ES</a>
 								<span class="lang">/</span>
-								<button id="langEng" class="lang">EN</button>
+								<a href="../eng/index.html" id="langEng" class="lang">EN</a>
 							</div>
 						</div>
 					</div>
@@ -120,13 +120,13 @@
 				<div class="carousel slide" id="primary-carousel" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img class="d-block w-100 img-fluid" src="img/slide1.jpg" alt="">
+							<img class="d-block w-100 img-fluid" src="../img/slide1.jpg" alt="">
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100 img-fluid" src="img/slide2.jpg" alt="">
+							<img class="d-block w-100 img-fluid" src="../img/slide2.jpg" alt="">
 						</div>
 						<div class="carousel-item">
-							<img class="d-block w-100 img-fluid" src="img/slide3.jpg" alt="">
+							<img class="d-block w-100 img-fluid" src="../img/slide3.jpg" alt="">
 						</div>
 					</div>
 				</div>			
@@ -139,34 +139,42 @@
 	<section class="videos">
 		<div class="video1">
 			<!-- <img src="img/video.png" class="img-fluid"> -->
-			<video src="video/sarmiento.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
-			<div class="noticia">
-				<h6 class="titulo">RELANZAMIENTO WEB SARMIENTO</h6>
-				<p class="texto">El 11 de septiembre del corriente se lanzó el nuevo sitio web de "Los viajes de Sarmiento" presentando nuevas secciones y contenidos.</p>
+			<video src="../video/sarmiento.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
+			<div class="noticia d-flex align-items-center">
+				<div class="col-12">
+					<h6 class="titulo">RELANZAMIENTO WEB SARMIENTO</h6>
+					<p class="texto">El 11 de septiembre del corriente se lanzó el nuevo sitio web de "Los viajes de Sarmiento" presentando nuevas secciones y contenidos.</p>
+				</div>
 			</div>
 		</div>
 		<div class="video2">
 			<!-- <img src="img/video.png" class="img-fluid"> -->
-			<video src="video/perito.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
-			<div class="noticia">
-				<h6 class="titulo">EL PERITO MORENO</h6>
-				<p class="texto">Adelanto exclusivo de la nueva película que estamos realizando sobre los viajes del Perito Moreno.</p>
+			<video src="../video/perito.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
+			<div class="noticia d-flex align-items-center">
+				<div class="col-12">
+					<h6 class="titulo">EL PERITO MORENO</h6>
+					<p class="texto">Adelanto exclusivo de la nueva película que estamos realizando sobre los viajes del Perito Moreno.</p>
+				</div>
 			</div>
 		</div>
 		<div class="video3">
 			<!-- <img src="img/video.png" class="img-fluid"> -->
-			<video src="video/mustang.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
-			<div class="noticia">
-				<h6 class="titulo">PRESENTACIÓN NUEVO FORD MUSTANG | 2017</h6>
-				<p class="texto">Testeamos el nuevo modelo de Mustang durante el rodaje del comercial 2017.</p>
+			<video src="../video/mustang.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
+			<div class="noticia d-flex align-items-center">
+				<div class="col-12 ">
+					<h6 class="titulo">PRESENTACIÓN NUEVO FORD MUSTANG | 2017</h6>
+					<p class="texto">Testeamos el nuevo modelo de Mustang durante el rodaje del comercial 2017.</p>
+				</div>
 			</div>
 		</div>
 		<div class="video4">
 			<!-- <img src="img/video.png" class="img-fluid"> -->
-			<video src="video/ballenas.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
-			<div class="noticia">
-				<h6 class="titulo">PATAGONIA ARGENTINA</h6>
-				<p class="texto">Recorrido exclusivo por los paisajes más australes de la Patagonia Argentina.</p>
+			<video src="../video/ballenas.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
+			<div class="noticia d-flex align-items-center">
+				<div class="col-12">
+					<h6 class="titulo">PATAGONIA ARGENTINA</h6>
+					<p class="texto">Recorrido exclusivo por los paisajes más australes de la Patagonia Argentina.</p>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -187,7 +195,7 @@
 		<div class="container">
 			<div class="row justify-content-center align-items-center">
 				<div class="col-12 col-lg-4">
-					<img src="img/avatarG.png" class="img-fluid" alt="Guestavo Huevo Muñoz">
+					<img src="../img/avatarG.png" class="img-fluid" alt="Guestavo Huevo Muñoz">
 				</div>
 				<div class="d-none d-lg-block col-1"></div>
 				<div class="col-12 col-lg-5">
@@ -215,7 +223,7 @@
 		<div class="row justify-content-center">
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Gustavo</h3>
 						<p class="texto-equipo">Director general</p>
@@ -224,7 +232,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Gabriela</h3>
 						<p class="texto-equipo">Directora creativa</p>
@@ -233,7 +241,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Valentín</h3>
 						<p class="texto-equipo">Equipo de diseño</p>
@@ -242,7 +250,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Belén</h3>
 						<p class="texto-equipo">Equipo de diseño</p>
@@ -251,7 +259,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Analía</h3>
 						<p class="texto-equipo">Equipo de diseño</p>
@@ -260,7 +268,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Guillermina</h3>
 						<p class="texto-equipo">Equipo de diseño</p>
@@ -269,7 +277,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Mercedes</h3>
 						<p class="texto-equipo">Equipo de diseño</p>
@@ -278,7 +286,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Matías</h3>
 						<p class="texto-equipo">Equipo de animación</p>
@@ -287,7 +295,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Katharina</h3>
 						<p class="texto-equipo">Equipo de administración</p>
@@ -305,100 +313,100 @@
 			</div>
 
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso1.png" class="img-fluid" alt="Presidencia de la Nación">
+				<img src="../img/Recurso1.png" class="img-fluid" alt="Presidencia de la Nación">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso2.png" class="img-fluid" alt="YPF">
+				<img src="../img/Recurso2.png" class="img-fluid" alt="YPF">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso3.png" class="img-fluid" alt="Techint">
+				<img src="../img/Recurso3.png" class="img-fluid" alt="Techint">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso4.png" class="img-fluid" alt="Tenaris">
+				<img src="../img/Recurso4.png" class="img-fluid" alt="Tenaris">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso5.png" class="img-fluid" alt="Barrick Gold">
+				<img src="../img/Recurso5.png" class="img-fluid" alt="Barrick Gold">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso6.png" class="img-fluid" alt="Panedile">
+				<img src="../img/Recurso6.png" class="img-fluid" alt="Panedile">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso7.png" class="img-fluid" alt="Troy Resources Argentina">
+				<img src="../img/Recurso7.png" class="img-fluid" alt="Troy Resources Argentina">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso8.png" class="img-fluid" alt="360 Energy">
+				<img src="../img/Recurso8.png" class="img-fluid" alt="360 Energy">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso9.png" class="img-fluid" alt="McKinsey & Company">
+				<img src="../img/Recurso9.png" class="img-fluid" alt="McKinsey & Company">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso10.png" class="img-fluid" alt="Ford">
+				<img src="../img/Recurso10.png" class="img-fluid" alt="Ford">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso11.png" class="img-fluid" alt="Toyota">
+				<img src="../img/Recurso11.png" class="img-fluid" alt="Toyota">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso12.png" class="img-fluid" alt="Antofagasta Minerals">
+				<img src="../img/Recurso12.png" class="img-fluid" alt="Antofagasta Minerals">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso13.png" class="img-fluid" alt="Gobierno de San Juan">
+				<img src="../img/Recurso13.png" class="img-fluid" alt="Gobierno de San Juan">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso14.png" class="img-fluid" alt="Vialidad Nacional">
+				<img src="../img/Recurso14.png" class="img-fluid" alt="Vialidad Nacional">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso15.png" class="img-fluid" alt="Gobierno de Chile">
+				<img src="../img/Recurso15.png" class="img-fluid" alt="Gobierno de Chile">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso16.png" class="img-fluid" alt="El Trece">
+				<img src="../img/Recurso16.png" class="img-fluid" alt="El Trece">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso17.png" class="img-fluid" alt="Grupo Phronesis">
+				<img src="../img/Recurso17.png" class="img-fluid" alt="Grupo Phronesis">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso18.png" class="img-fluid" alt="Petersen, Thiele y Cruz">
+				<img src="../img/Recurso18.png" class="img-fluid" alt="Petersen, Thiele y Cruz">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso19.png" class="img-fluid" alt="Fundaciones Grupo Petersen">
+				<img src="../img/Recurso19.png" class="img-fluid" alt="Fundaciones Grupo Petersen">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso20.png" class="img-fluid" alt="Banco San Juan">
+				<img src="../img/Recurso20.png" class="img-fluid" alt="Banco San Juan">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso21.png" class="img-fluid" alt="Funación Banco San Juan">
+				<img src="../img/Recurso21.png" class="img-fluid" alt="Funación Banco San Juan">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso22.png" class="img-fluid" alt="Funación Banco Santa Fe">
+				<img src="../img/Recurso22.png" class="img-fluid" alt="Funación Banco Santa Fe">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso23.png" class="img-fluid" alt="Funación Banco Entre Rios">
+				<img src="../img/Recurso23.png" class="img-fluid" alt="Funación Banco Entre Rios">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso24.png" class="img-fluid" alt="Funación Banco Santa Cruz">
+				<img src="../img/Recurso24.png" class="img-fluid" alt="Funación Banco Santa Cruz">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso25.png" class="img-fluid" alt="Bodegas Bórbore">
+				<img src="../img/Recurso25.png" class="img-fluid" alt="Bodegas Bórbore">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso26.png" class="img-fluid" alt="Tekno Food">
+				<img src="../img/Recurso26.png" class="img-fluid" alt="Tekno Food">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso27.png" class="img-fluid" alt="Olivita">
+				<img src="../img/Recurso27.png" class="img-fluid" alt="Olivita">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso28.png" class="img-fluid" alt="Conduciendo Bien">
+				<img src="../img/Recurso28.png" class="img-fluid" alt="Conduciendo Bien">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso29.png" class="img-fluid" alt="Instituto Cervantes">
+				<img src="../img/Recurso29.png" class="img-fluid" alt="Instituto Cervantes">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso30.png" class="img-fluid" alt="Saul Saidel">
+				<img src="../img/Recurso30.png" class="img-fluid" alt="Saul Saidel">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso31.png" class="img-fluid" alt="Teatro del Bicentenario">
+				<img src="../img/Recurso31.png" class="img-fluid" alt="Teatro del Bicentenario">
 			</div>
 			<div class="col-4 col-lg-3">
-				<img src="img/Recurso32.png" class="img-fluid" alt="MPBA Franklin Rawson">
+				<img src="../img/Recurso32.png" class="img-fluid" alt="MPBA Franklin Rawson">
 			</div>
 		</div>
 	</section>
@@ -549,9 +557,9 @@
 	</footer>
 
 
-	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="js/popper.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/scripts.js"></script>
+	<script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="../js/popper.min.js"></script>
+	<script type="text/javascript" src="../js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../js/scripts.js"></script>
 </body>
 </html>
