Cambiando la animacion del menu hamburguesa

--- a/esp/fotografia/institucional.html
+++ b/esp/fotografia/institucional.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>GHM - Fotografía Institucional</title>
-	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../../css/estilos.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body class="fotografia">
@@ -13,9 +13,9 @@
 		<div class="container lang-container d-none d-lg-block">
 			<div class="row">
 				<div class="col-2 text-right ml-auto">
-					<button id="langEsp" class="lang active">ES</button>
+					<a href="#" id="langEsp" class="lang active">ES</a>
 					<span class="lang">/</span>
-					<button id="langEng" class="lang">EN</button>
+					<a href="../../eng/fotografia/institucional.html" id="langEng" class="lang">EN</a>
 				</div>
 			</div>
 		</div>
@@ -100,8 +100,8 @@
 	</header>
 	
 	<div>
-		<img src="../img/FOTOGRAFIA-INSTITUCIONAL-01.jpg" class="d-none d-md-block img-fluid">
-		<img src="../img/FOTOGRAFIA-INSTITUCIONAL.jpg" class="d-block d-md-none img-fluid">
+		<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-01.jpg" class="d-none d-md-block img-fluid">
+		<img src="../../img/FOTOGRAFIA-INSTITUCIONAL.jpg" class="d-block d-md-none img-fluid">
 	</div>
 
 	<div class="container bio d-block d-md-none">
@@ -116,82 +116,82 @@
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-BARRICK-01.jpg" class="img-fluid" alt="Barrick">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-BARRICK-01.jpg" class="img-fluid" alt="Barrick">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp img-container">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-BARRICK-LOGO.png" class="d-block" alt="Barrick">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-BARRICK-LOGO.png" class="d-block" alt="Barrick">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp img-container">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-360ENERGY-LOGO.png" class="d-block" alt="360 Energy">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-360ENERGY-LOGO.png" class="d-block" alt="360 Energy">
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-360ENERGY-01.jpg" class="img-fluid" alt="Cerro Fitz Roy">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-360ENERGY-01.jpg" class="img-fluid" alt="Cerro Fitz Roy">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-TECHINT-01.jpg" class="img-fluid" alt="Techint">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-TECHINT-01.jpg" class="img-fluid" alt="Techint">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp img-container">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-TECHINT-LOGO.png" class="d-block" alt="Techint">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-TECHINT-LOGO.png" class="d-block" alt="Techint">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp img-container">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-PANEDILE-LOGO.png" class="d-block" alt="Panedile">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-PANEDILE-LOGO.png" class="d-block" alt="Panedile">
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-PANEDILE-01.jpg" class="img-fluid" alt="Panedile">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-PANEDILE-01.jpg" class="img-fluid" alt="Panedile">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-BSJ-01.jpg" class="img-fluid" alt="Banco San Juan">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-BSJ-01.jpg" class="img-fluid" alt="Banco San Juan">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp img-container">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-BSJ-LOGO.png" alt="Banco San Juan">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-BSJ-LOGO.png" alt="Banco San Juan">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp img-container">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-SOLFRUT-LOGO.png" alt="SolFrut">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-SOLFRUT-LOGO.png" alt="SolFrut">
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-SOLFRUT-01.jpg" class="img-fluid" alt="SolFrut">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-SOLFRUT-01.jpg" class="img-fluid" alt="SolFrut">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-YPF-01.jpg" class="img-fluid" alt="YPF">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-YPF-01.jpg" class="img-fluid" alt="YPF">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp img-container">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-YPF-LOGO.png" alt="YPF">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-YPF-LOGO.png" alt="YPF">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp img-container">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-TEKNOFOOD-LOGO.png" alt="Tekno Food">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-TEKNOFOOD-LOGO.png" alt="Tekno Food">
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-TEKNOFOOD-01.jpg" class="img-fluid" alt="Tekno Food">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-TEKNOFOOD-01.jpg" class="img-fluid" alt="Tekno Food">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-PETERSEN-01.jpg" class="img-fluid" alt="Petersen, Thiele y Cruz">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-PETERSEN-01.jpg" class="img-fluid" alt="Petersen, Thiele y Cruz">
 			</div>
 			<div class="col-12 col-md-6 order-2 div-sp img-container">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-PETERSEN-LOGO.png" alt="Petersen, Thiele y Cruz">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-PETERSEN-LOGO.png" alt="Petersen, Thiele y Cruz">
 			</div>
 		</div>
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-2 order-md-1 div-sp img-container">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-TEATRO-LOGO.png" alt="Teatro del Bicentenario">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-TEATRO-LOGO.png" alt="Teatro del Bicentenario">
 			</div>
 			<div class="col-12 col-md-6 order-1 order-md-2 div-sp">
-				<img src="../img/FOTOGRAFIA-INSTITUCIONAL-TEATRO-01.jpg" class="img-fluid" alt="Teatro del Bicentenario">
+				<img src="../../img/FOTOGRAFIA-INSTITUCIONAL-TEATRO-01.jpg" class="img-fluid" alt="Teatro del Bicentenario">
 			</div>
 		</div>
 	</div>
@@ -283,9 +283,9 @@
 
 
 
-	<script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
-	<script type="text/javascript" src="../js/popper.min.js"></script>
-	<script type="text/javascript" src="../js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="../js/scripts.js"></script>
+	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="../../js/popper.min.js"></script>
+	<script type="text/javascript" src="../../js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="../../js/scripts.js"></script>
 </body>
 </html>
