--- a/esp/fotografia/infraestructura.html
+++ b/esp/fotografia/infraestructura.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>GHM - Fotografía Infraestructura</title>
-	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/estilos.css">
+	<link rel="stylesheet" type="text/css" href="../../css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../../css/estilos.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body class="fotografia">
