--- a/esp/index.html
+++ b/esp/index.html
@@ -33,7 +33,7 @@
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
 					<div id="nav-icon" class="nav-icon">
 						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
+						<!-- <span class="icon-bar"></span> -->
 						<span class="icon-bar"></span>
 					</div>
 				</button>
@@ -85,7 +85,7 @@
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
-							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarMonitoreo" data-toggle="dropdown" role="button">MONITOREO<span class="closeNav d-lg-none">+</span></a>
+							<a href="#" class="nav-link dropdown-toggle navClose-link" id="navBarMonitoreo" data-toggle="dropdown" role="button">MONITOREO</a>
 							<div class="dropdown-menu" aria-labelledby="navBarMonitoreo">
 					        </div>
 						</li>
